Partially updates JUnit tests for URI (issue #79)