@@ -1,6 +1,7 @@
 package com.nimbusds.oauth2.sdk.client;
 
 
+import java.net.URI;
 import java.net.URL;
 
 import com.nimbusds.oauth2.sdk.ParseException;
@@ -20,23 +21,23 @@ public class ClientReadRequestTest extends TestCase {
 	public void testCycle()
 		throws Exception {
 
-		URL url = new URL("https://c2id.com/client-reg/123");
+		URI uri = new URI("https://c2id.com/client-reg/123");
 		BearerAccessToken accessToken = new BearerAccessToken();
 
-		ClientReadRequest request = new ClientReadRequest(url, accessToken);
+		ClientReadRequest request = new ClientReadRequest(uri, accessToken);
 
-		assertEquals(url, request.getEndpointURI());
+		assertEquals(uri, request.getEndpointURI());
 		assertEquals(accessToken, request.getAccessToken());
 
 		HTTPRequest httpRequest = request.toHTTPRequest();
 
 		assertEquals(HTTPRequest.Method.GET, httpRequest.getMethod());
-		assertEquals(url, httpRequest.getURL());
+		assertEquals(uri, httpRequest.getURL());
 		assertEquals(accessToken.toAuthorizationHeader(), httpRequest.getAuthorization());
 
 		request = ClientReadRequest.parse(httpRequest);
 
-		assertEquals(url.toString(), request.getEndpointURI().toString());
+		assertEquals(uri.toString(), request.getEndpointURI().toString());
 		assertEquals(accessToken.getValue(), request.getAccessToken().getValue());
 	}
 
